// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Menu /> Default story renders snapshot 1`] = `
<div
  class="menu"
  data-headlessui-state="open"
  data-open=""
>
  <button
    aria-controls="headlessui-menu-items-:r3:"
    aria-expanded="true"
    aria-haspopup="menu"
    class="button button--layout-right button--primary button--lg button--size-lg button--variant-default menu__button"
    data-active=""
    data-headlessui-state="open active hover"
    data-hover=""
    data-open=""
    id="headlessui-menu-button-:r2:"
    type="button"
  >
    <span
      class="button__text"
    >
      Documentation Links
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        height="1.5rem"
        style="--icon-size: 1.5rem;"
        viewBox="0 0 24 24"
        width="1.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`<Menu /> MenuWithAvatarButton story renders snapshot 1`] = `
<div
  class="menu"
  data-headlessui-state="open"
  data-open=""
>
  <button
    aria-controls="headlessui-menu-items-:r1l:"
    aria-expanded="true"
    aria-haspopup="menu"
    class=""
    data-active=""
    data-headlessui-state="open active hover"
    data-hover=""
    data-open=""
    id="headlessui-menu-button-:r1k:"
    type="button"
  >
    <div
      aria-label="Avatar for user Josie Sandberg"
      class="avatar avatar--circle avatar--md avatar--initials"
      role="img"
    >
      JS
    </div>
  </button>
</div>
`;

exports[`<Menu /> MenuWithIconButton story renders snapshot 1`] = `
<div
  class="menu"
  data-headlessui-state="open"
  data-open=""
>
  <button
    aria-controls="headlessui-menu-items-:r1v:"
    aria-expanded="true"
    aria-haspopup="menu"
    class=""
    data-active=""
    data-headlessui-state="open active hover"
    data-hover=""
    data-open=""
    id="headlessui-menu-button-:r1u:"
    type="button"
  >
    <svg
      class="icon"
      fill="currentColor"
      height="2rem"
      role="img"
      style="--icon-size: 2rem;"
      viewBox="0 0 24 24"
      width="2rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        show more
      </title>
      <path
        d="M12 20C11.45 20 10.9793 19.8043 10.588 19.413C10.196 19.021 10 18.55 10 18C10 17.45 10.196 16.979 10.588 16.587C10.9793 16.1957 11.45 16 12 16C12.55 16 13.021 16.1957 13.413 16.587C13.8043 16.979 14 17.45 14 18C14 18.55 13.8043 19.021 13.413 19.413C13.021 19.8043 12.55 20 12 20ZM12 14C11.45 14 10.9793 13.804 10.588 13.412C10.196 13.0207 10 12.55 10 12C10 11.45 10.196 10.979 10.588 10.587C10.9793 10.1957 11.45 10 12 10C12.55 10 13.021 10.1957 13.413 10.587C13.8043 10.979 14 11.45 14 12C14 12.55 13.8043 13.0207 13.413 13.412C13.021 13.804 12.55 14 12 14ZM12 8C11.45 8 10.9793 7.804 10.588 7.412C10.196 7.02067 10 6.55 10 6C10 5.45 10.196 4.97933 10.588 4.588C10.9793 4.196 11.45 4 12 4C12.55 4 13.021 4.196 13.413 4.588C13.8043 4.97933 14 5.45 14 6C14 6.55 13.8043 7.02067 13.413 7.412C13.021 7.804 12.55 8 12 8Z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Menu /> WithCustomButton story renders snapshot 1`] = `
<div
  class="menu"
  data-headlessui-state="open"
  data-open=""
>
  <button
    aria-controls="headlessui-menu-items-:r11:"
    aria-expanded="true"
    aria-haspopup="menu"
    class=""
    data-active=""
    data-headlessui-state="open active hover"
    data-hover=""
    data-open=""
    id="headlessui-menu-button-:r10:"
    type="button"
  >
    <div
      class="fpo"
    >
      Menu Button
    </div>
  </button>
</div>
`;

exports[`<Menu /> WithCustomSecondaryButton story renders snapshot 1`] = `
<div
  class="menu"
  data-headlessui-state="open"
  data-open=""
>
  <button
    aria-controls="headlessui-menu-items-:r1b:"
    aria-expanded="true"
    aria-haspopup="menu"
    class="button button--layout-none button--secondary button--lg button--size-lg button--variant-default"
    data-active=""
    data-headlessui-state="open active hover"
    data-hover=""
    data-open=""
    id="headlessui-menu-button-:r1a:"
    type="button"
  >
    <span
      class="button__text"
    >
      Secondary Button
    </span>
  </button>
</div>
`;

exports[`<Menu /> WithLongButtonText story renders snapshot 1`] = `
<div
  class="menu"
  data-headlessui-state="open"
  data-open=""
>
  <button
    aria-controls="headlessui-menu-items-:rd:"
    aria-expanded="true"
    aria-haspopup="menu"
    class="button button--layout-right button--primary button--lg button--size-lg button--variant-default menu__button"
    data-active=""
    data-headlessui-state="open active hover"
    data-hover=""
    data-open=""
    id="headlessui-menu-button-:rc:"
    type="button"
  >
    <span
      class="button__text"
    >
      Long Trigger Button Text to Demonstrate Popover Matching
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        height="1.5rem"
        style="--icon-size: 1.5rem;"
        viewBox="0 0 24 24"
        width="1.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`<Menu /> WithShortButtonText story renders snapshot 1`] = `
<div
  class="menu"
  data-headlessui-state="open"
  data-open=""
>
  <button
    aria-controls="headlessui-menu-items-:rn:"
    aria-expanded="true"
    aria-haspopup="menu"
    class="button button--layout-right button--primary button--lg button--size-lg button--variant-default menu__button"
    data-active=""
    data-headlessui-state="open active hover"
    data-hover=""
    data-open=""
    id="headlessui-menu-button-:rm:"
    type="button"
  >
    <span
      class="button__text"
    >
      Menu
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        height="1.5rem"
        style="--icon-size: 1.5rem;"
        viewBox="0 0 24 24"
        width="1.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
        />
      </svg>
    </span>
  </button>
</div>
`;
